# TalentScouter

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
src/: cv_processor.py  file_handler.py  gpt_analyzer.py  main.py
